[gd_scene load_steps=4 format=3 uid="uid://dlh72sv8csvol"]

[ext_resource type="Script" path="res://Menu.gd" id="1_nvuta"]
[ext_resource type="FontFile" uid="uid://dp5wbgwgw40c5" path="res://Czcionka/1_Minecraft-Regular.otf" id="2_4qhy8"]
[ext_resource type="Texture2D" uid="uid://dr8d7i45ytl6k" path="res://spacefield_a-000.png" id="2_bu7am"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_nvuta")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bu7am")
expand_mode = 2

[node name="Tekst1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -176.0
offset_right = 28.0
offset_bottom = -153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.890196, 0.760784, 0.294118, 1)
theme_override_fonts/font = ExtResource("2_4qhy8")
text = "Istnieje ponad 260 różnych gatunków małp, a są one podzielone na dwie główne grupy: małpy szerokonose (w tym człowiek) i małpy wąskonose."
horizontal_alignment = 1
structured_text_bidi_override_options = [null]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -76.0
offset_right = 100.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="StartPrzycisk" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 2
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4qhy8")
text = "START"

[node name="TutorialPrzycisk" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 2
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4qhy8")
text = "TUTORIAL"

[node name="QuitPrzycisk" type="Button" parent="VBoxContainer"]
texture_filter = 1
texture_repeat = 2
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4qhy8")
text = "QUIT"

[node name="Tytul" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 37.0
offset_right = 2.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_4qhy8")
theme_override_font_sizes/font_size = 50
text = "Monkey the Game"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartPrzycisk" to="." method="_on_start_przycisk_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialPrzycisk" to="." method="_on_tutorial_przycisk_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitPrzycisk" to="." method="_on_quit_przycisk_pressed"]
